-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b18
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241656 | 13.0.3 | Roland Westrelin | P2 | Resolved | Fixed | b02 |
| JDK-8232884 | 11.0.7-oracle | Roland Westrelin | P2 | Closed | Fixed | b01 |
| JDK-8233508 | 11.0.6 | Roland Westrelin | P2 | Resolved | Fixed | b02 |
Internal Error at split_if.cpp:116, pid=16444, tid=16455
Error: assert(bol->is_Bool()) failed
triggered by attached test case
Error: assert(bol->is_Bool()) failed
triggered by attached test case
- backported by
-
JDK-8233508 assert(bol->is_Bool()) crash during split if due to FastLockNode
-
- Resolved
-
-
JDK-8241656 assert(bol->is_Bool()) crash during split if due to FastLockNode
-
- Resolved
-
-
JDK-8232884 assert(bol->is_Bool()) crash during split if due to FastLockNode
-
- Closed
-
- relates to
-
JDK-8326605 [lworld] SplitIfSharedFastLockBehindCastPP performs synchronization on a value class
-
- Resolved
-