8231620: assert(bol->is_Bool()) crash during split if due to FastLockNode

Reviewed-by: vlivanov, thartmann